tests/fixtures/invalid/pow_int_str_bytes.py
# Cannot call pow() with Int, Str, Bytes
x = pow(1, "hello", b"hello")
